--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "dev": "npm i && npx tailwindcss -i ./public/src/input.css -o ./public/build.css --watch"
+    "dev": "npx tailwindcss -i ./public/src/input.css -o ./public/build.css --watch"
   },
   "dependencies": {
     "daisyui": "^2.25.0"
