--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "devDependencies": {
-    "tailwindcss": "^3.1.8"
-  },
+  "name": "myblog",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "npx tailwindcss -i ./public/src/input.css -o ./public/build.css --watch",
-    "mini": "npx tailwindcss -o ./public/build.css --minify"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "daisyui": "^2.25.0",
-    "jquery": "^3.6.1",
-    "typed.js": "^2.0.12"
+    "daisyui": "^2.31.0",
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
